--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
-        android:id="@+id/edtReason"
+        android:id="@+id/edtPatientDoctorAppointmentReason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -70,7 +70,7 @@
         android:text="@string/pick_time_n_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtReason" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPatientDoctorAppointmentReason" />
 
 <!--    <Button
         android:id="@+id/btn_bookAppointment"
