--- a/app/src/main/res/layout/pt_appoint_book_container.xml
+++ b/app/src/main/res/layout/pt_appoint_book_container.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pt_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:context=".view.activity.patient.PatientHomeActivity">
 
-    <!--  <include
-          android:id="@+id/toolbar"
-          layout="@layout/appbar_layout"
-          android:layout_width="match_parent"
-          android:layout_height="40dp" />-->
-
-    <include
-
-        layout="@layout/pt_appoint_book_container"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <android.support.v7.widget.Toolbar
+            app:logo="@drawable/app_bar_logo"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/action_bar_height"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/pt_nav_view"
-        android:layout_width="wrap_content"
+
+
+    </android.support.design.widget.AppBarLayout>
+
+
+
+    <FrameLayout
+
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/pt_nav_header_home"
-        app:menu="@menu/activity_home2_drawer" />
+        android:layout_below="@+id/appbar" />
 
-</android.support.v4.widget.DrawerLayout>
-<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -60,3 +63,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbar" />
 </android.support.constraint.ConstraintLayout>-->
+</RelativeLayout>
