--- a/app/src/main/res/menu/activity_home2_drawer.xml
+++ b/app/src/main/res/menu/activity_home2_drawer.xml
@@ -9,6 +9,11 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
             android:title="@string/home" />
+
+        <item
+            android:id="@+id/nav_appointment"
+            android:icon="@drawable/ic_menu_date_range"
+            android:title="@string/appointment" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_profile"
