--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,7 +37,7 @@
 
     <dimen name="actionbar_to_container_spacing">50dp</dimen>
 
-     <!--for spinner-->
+    <!--for spinner-->
     <dimen name="spinner_border_margin_top">10dp</dimen>
     <dimen name="spinner_margin_left">5dp</dimen>
     <dimen name="spinner_image_height">30dp</dimen>
@@ -47,6 +47,7 @@
 
     <!--padding Default-->
     <dimen name="padding_def">10dp</dimen>
+    <dimen name="no_padding">0dp</dimen>
 
     <!--Margin top Default-->
     <dimen name="margin_top_def">10dp</dimen>
@@ -74,4 +75,8 @@
     <!--doctor thumbnail height and width-->
     <dimen name="doctor_thumbnail_height">50dp</dimen>
     <dimen name="doctor_thumbnail_width">50dp</dimen>
+
+    <!--  text view of  Total Amount in payment module-->
+    <dimen name="tv_total_amount_height">40dp</dimen>
+
 </resources>
