--- a/app/src/main/res/layout/list_row_patient_appointment.xml
+++ b/app/src/main/res/layout/list_row_patient_appointment.xml
@@ -2,18 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/off_white">
+    android:padding="@dimen/padding_def"
+    android:background="@color/white"
+    android:layout_height="wrap_content">
 
-     <android.support.v7.widget.RecyclerView
-         android:id="@+id/recyAppointment"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:layout_below="@+id/actv_specializationCat"
-         android:layout_marginTop="20dp"
-         android:scrollbars="vertical" />
+    <!--    <ImageView
+            android:id="@+id/lr_iv_DocImage"
+            android:layout_width="@dimen/doctor_thumbnail_width"
+            android:layout_height="@dimen/doctor_thumbnail_height"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="8dp"
+            app:srcCompat="@drawable/ic_doctor" />-->
 
-<!--    <de.hdodenhof.circleimageview.CircleImageView
+    <de.hdodenhof.circleimageview.CircleImageView
 
         android:id="@+id/lr_iv_DocImage"
         android:layout_width="70dp"
@@ -29,15 +31,15 @@
         android:layout_alignParentEnd="true"
 
         android:layout_marginTop="20dp"
-        android:text="Date:2018-03-19 Time:09:00 pm" />
+        android:text="Dr. Faisal Khali koborerdfjkdsjfl" />
 
     <TextView
+        android:padding="@dimen/padding_def"
         android:id="@+id/lr_tv_DocName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lr_iv_DocImage"
-        android:padding="@dimen/padding_def"
-        android:text="Dr Niloy"
+        android:text="Doctor Nam,e"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -59,5 +61,7 @@
         android:layout_alignTop="@+id/lr_tv_DocName"
         android:layout_marginEnd="13dp"
         android:layout_marginTop="30dp"
-        android:text="Call" />-->
+        android:text="Call" />
+
+
 </RelativeLayout>
