#build 033 fire base notification

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,13 +7,16 @@
     android:background="@color/colorPrimary"
     tools:context="com.electrocraft.nirzo.pluse.view.activity.SplashScreen">
 
-
     <ImageView
-        android:contentDescription="@string/app_logo"
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_margin="80dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/app_logo"
         app:srcCompat="@drawable/app_water_logo" />
+
 </RelativeLayout>
+
