--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toTopOf="parent" />-->
 
-    <WebView
-        android:id="@+id/webBowser"
+    <FrameLayout
+        android:id="@+id/frameJitsiMeet"
         android:layout_width="match_parent"
 
         android:layout_height="match_parent"
